Fixed jump on end screen

--- a/www/MemoryGame/style.css
+++ b/www/MemoryGame/style.css
@@ -16,7 +16,7 @@ html, body {
     padding: 2%;
     margin: 0 auto;
     width: 100%;
-    height: 100%;
+    max-height: 100%;
     box-sizing: border-box;
     text-align: center;
 }
@@ -89,7 +89,7 @@ h1.winner{
     padding-bottom: 1.5vw;
 }
 .tries {
-    font-size: 2vw;
+    font-size: 2.5vw;
     margin: -2vw 0 -1vw;
 }
 button {
